erDiagram
%% Guarded by TestSchemaDocumentationMirrorsExecutableMigration against the
%% auto-applied baseline (migrations 0001-0009 and 0011).
%%
%% Journal-first end state (migration 0010, SPEC-056): migration 0010 is the
%% explicit, out-of-band journal-first transformation, deliberately excluded
%% from the auto-applied set and run only via
%% `loaf state migrate journal-first --apply`. After it is applied the shipped
%% runtime differs from the baseline below by exactly this delta:
%%   - DROP TABLE sessions
%%   - DROP TABLE session_state_snapshots
%%   - journal_entries: drop the session_id FK column (harness_session_id, a
%%     plain provenance tag, becomes the sole conversation correlator)
%%   - handoffs: replace the session_id FK column with harness_session_id TEXT
%%     (plain provenance tag, no FK)
%%   - journal_search (FTS5): rename session_id -> harness_session_id (UNINDEXED)
%% The sessions/session_state_snapshots entities and the sessions--* / *_session
%% relationships below are retained solely to mirror the guarded baseline.
%% Migration SQL (source of truth): internal/state/migrations/0010_journal_first.sql.
%% Journal provenance exception (migration 0011): journal_origins and
%% journal_deferrals intentionally do not foreign-key journal_entries or sparks,
%% because migration 0010 may rebuild journal_entries after 0011 has applied.
  projects {
    text id PK
    text identity_hash UK
    text created_at
    text updated_at
    text friendly_name
    text current_path
    text last_seen_at
  }
  project_paths {
    text id PK
    text project_id FK
    text path UK
    integer is_current
    text first_seen_at
    text last_seen_at
    text created_at
    text updated_at
  }
  schema_migrations {
    integer version PK
    text name
    text checksum
    text applied_at
  }
  aliases {
    text id PK
    text project_id FK
    text entity_kind
    text entity_id
    text namespace
    text alias
    text created_at
    text updated_at
  }
  specs {
    text id PK
    text project_id FK
    text title
    text status
    text body_source_id FK
    text created_at
    text updated_at
    text branch
    text source
  }
  tasks {
    text id PK
    text project_id FK
    text spec_id FK
    text title
    text status
    text priority
    text body_source_id FK
    text created_at
    text updated_at
  }
  ideas {
    text id PK
    text project_id FK
    text title
    text status
    text body_source_id FK
    text created_at
    text updated_at
  }
  sparks {
    text id PK
    text project_id FK
    text scope
    text status
    text text
    text source_id FK
    text created_at
    text updated_at
  }
  brainstorms {
    text id PK
    text project_id FK
    text title
    text status
    text body_source_id FK
    text created_at
    text updated_at
  }
  shaping_drafts {
    text id PK
    text project_id FK
    text title
    text status
    text body_source_id FK
    text created_at
    text updated_at
  }
  sessions {
    text id PK
    text project_id FK
    text harness_session_id
    text branch
    text status
    text body_source_id FK
    text created_at
    text updated_at
  }
  session_state_snapshots {
    text id PK
    text project_id FK
    text session_id FK
    text content
    text observed_branch
    text observed_worktree
    text created_at
    text updated_at
  }
  artifact_bodies {
    text id PK
    text project_id FK
    text entity_kind
    text entity_id
    text body_kind
    text content
    text content_hash
    text source_id FK
    text created_at
    text updated_at
  }
  artifact_search {
    integer rowid PK
    text project_id
    text entity_kind
    text entity_id
    text body_kind
    text content
  }
  journal_search {
    integer rowid PK
    text project_id
    text journal_entry_id
    text session_id
    text entry_type
    text scope
    text message
  }
  journal_origins {
    text journal_entry_id PK
    text project_id FK
    integer envelope_version
    text capture_mechanism
    text observed_harness
    text observed_harness_version
    text harness_session_id
    text agent_id
    text source_event
    text branch
    text worktree
    text head
    text change_path
    text change_sha256
    integer dirty
    integer reconstructable
    text durable_result_kind
    text durable_result_id
    text created_at
  }
  journal_deferrals {
    text project_id FK
    text operation_key
    text journal_entry_id UK
    text spark_id UK
    text stored_digest
    text created_at
  }
  docs_index {
    text id PK
    text project_id FK
    text path
    text content
    text content_hash
    text indexed_ref
    text indexed_worktree
    text indexed_at
    text created_at
    text updated_at
  }
  docs_search {
    integer rowid PK
    text project_id
    text id
    text path
    text content
  }
  reports {
    text id PK
    text project_id FK
    text report_kind
    text title
    text status
    text body_source_id FK
    text created_at
    text updated_at
  }
  runs {
    text id PK
    text project_id FK
    text generator_ref
    text generator_version
    text generator_hash
    text status
    text metadata
    text started_at
    text completed_at
    text created_at
    text updated_at
  }
  findings {
    text id PK
    text project_id FK
    text report_id FK
    text run_id FK
    text title
    text status
    text severity
    text confidence
    text dimension
    text path
    integer line_start
    integer line_end
    text symbol
    text metadata
    text created_at
    text updated_at
  }
  verdicts {
    text id PK
    text project_id FK
    text finding_id FK
    text run_id FK
    text outcome
    text rationale
    text reproduction_notes
    text metadata
    text created_at
    text updated_at
  }
  plans {
    text id PK
    text project_id FK
    text spec_id FK
    text title
    text status
    text body_source_id FK
    text created_at
    text updated_at
  }
  handoffs {
    text id PK
    text project_id FK
    text session_id FK
    text task_id FK
    text title
    text status
    text body_source_id FK
    text created_at
    text updated_at
  }
  councils {
    text id PK
    text project_id FK
    text spec_id FK
    text title
    text status
    text body_source_id FK
    text created_at
    text updated_at
  }
  journal_entries {
    text id PK
    text project_id FK
    text entry_type
    text scope
    text message
    text observed_branch
    text observed_worktree
    text harness_session_id
    text session_id FK
    text spec_id FK
    text task_id FK
    text created_at
    text updated_at
  }
  events {
    text id PK
    text project_id FK
    text entity_kind
    text entity_id
    text event_type
    text from_status
    text to_status
    text note
    text created_at
    text updated_at
  }
  relationships {
    text id PK
    text project_id FK
    text from_entity_kind
    text from_entity_id
    text to_entity_kind
    text to_entity_id
    text relationship_type
    text reason
    text created_at
    text updated_at
    text origin
    text source_id
    text source_field
  }
  tags {
    text id PK
    text project_id FK
    text name
    text created_at
    text updated_at
  }
  entity_tags {
    text id PK
    text project_id FK
    text tag_id FK
    text entity_kind
    text entity_id
    text created_at
    text updated_at
  }
  bundles {
    text id PK
    text project_id FK
    text slug
    text title
    text tag_query
    text created_at
    text updated_at
  }
  bundle_members {
    text id PK
    text project_id FK
    text bundle_id FK
    text entity_kind
    text entity_id
    text created_at
    text updated_at
  }
  sources {
    text id PK
    text project_id FK
    text source_kind
    text path
    text hash
    integer line_start
    integer line_end
    text imported_at
    text created_at
    text updated_at
  }
  backend_mappings {
    text id PK
    text project_id FK
    text backend
    text entity_kind
    text entity_id
    text external_kind
    text external_id
    text external_url
    text sync_status
    text created_at
    text updated_at
  }
  hook_events {
    text id PK
    text project_id FK
    text hook_id
    text hook_phase
    text command
    integer exit_code
    text message
    text created_at
    text updated_at
  }
  exports {
    text id PK
    text project_id FK
    text export_kind
    text format
    text path
    integer state_version
    text source_entity_kind
    text source_entity_id
    text generated_at
    text created_at
    text updated_at
  }

  projects ||--o{ aliases : scopes
  projects ||--o{ artifact_bodies : scopes
  projects ||--o{ docs_index : scopes
  projects ||--o{ specs : scopes
  projects ||--o{ tasks : scopes
  projects ||--o{ ideas : scopes
  projects ||--o{ sparks : scopes
  projects ||--o{ brainstorms : scopes
  projects ||--o{ shaping_drafts : scopes
  projects ||--o{ sessions : scopes
  projects ||--o{ session_state_snapshots : scopes
  projects ||--o{ reports : scopes
  projects ||--o{ runs : scopes
  projects ||--o{ findings : scopes
  projects ||--o{ verdicts : scopes
  projects ||--o{ plans : scopes
  projects ||--o{ handoffs : scopes
  projects ||--o{ councils : scopes
  projects ||--o{ journal_entries : scopes
  projects ||--o{ journal_origins : scopes
  projects ||--o{ journal_deferrals : scopes
  projects ||--o{ project_paths : locates
  projects ||--o{ events : scopes
  projects ||--o{ relationships : scopes
  projects ||--o{ tags : scopes
  projects ||--o{ entity_tags : scopes
  projects ||--o{ bundles : scopes
  projects ||--o{ bundle_members : scopes
  projects ||--o{ sources : scopes
  projects ||--o{ backend_mappings : scopes
  projects ||--o{ hook_events : scopes
  projects ||--o{ exports : scopes
  specs ||--o{ tasks : contains
  specs ||--o{ plans : shapes
  specs ||--o{ councils : contextualizes
  sessions ||--o{ journal_entries : records
  sessions ||--o{ handoffs : transfers
  sessions ||--o{ session_state_snapshots : summarizes
  tasks ||--o{ handoffs : transfers
  specs ||--o{ journal_entries : contextualizes
  tasks ||--o{ journal_entries : contextualizes
  reports ||--o{ findings : contains
  runs ||--o{ findings : produces
  runs ||--o{ verdicts : records
  findings ||--o{ verdicts : adjudicates
  tags ||--o{ entity_tags : labels
  bundles ||--o{ bundle_members : contains
  sources ||--o{ artifact_bodies : provenance
  sources ||--o{ specs : bodies
  sources ||--o{ tasks : bodies
  sources ||--o{ ideas : bodies
  sources ||--o{ sparks : origins
  sources ||--o{ brainstorms : bodies
  sources ||--o{ shaping_drafts : bodies
  sources ||--o{ sessions : bodies
  sources ||--o{ reports : bodies
  sources ||--o{ plans : bodies
  sources ||--o{ handoffs : bodies
  sources ||--o{ councils : bodies
  intents {
    text id PK
    text project_id FK
    text created_at
  }
  intent_snapshots {
    text id PK
    text project_id FK
    text intent_id FK
    integer seq
    text title
    text body
    text content_digest
    text created_at
  }
  intent_deferrals {
    text id PK
    text project_id FK
    text intent_id FK
    text operation_key
    text body
    text why
    text boundary
    text revisit_trigger
    text stored_digest
    text created_at
  }
  intent_dispositions {
    text id PK
    text project_id FK
    text intent_id FK
    integer seq
    text disposition
    text reason
    text deferral_id FK
    text supersedes_deferral_id FK
    text created_at
  }
  intent_operations {
    text project_id FK
    text operation_key
    text intent_id FK
    text stored_digest
    text journal_entry_id
    text spark_id
    integer projection_version
    text created_at
    text updated_at
  }
  explorations {
    text id PK
    text project_id FK
    text title
    text created_at
  }
  exploration_checkpoints {
    text id PK
    text project_id FK
    text exploration_id FK
    integer seq
    text purpose
    text conclusions
    text unresolved
    text next_action
    text operation_key
    text content_digest
    text created_at
  }
  exploration_checkpoint_items {
    text id PK
    text project_id FK
    text checkpoint_id FK
    text item_type
    integer position
    text content
    text created_at
  }
  logical_conversations {
    text id PK
    text project_id FK
    text title
    text operation_key
    text created_at
  }
  conversation_handles {
    text id PK
    text project_id FK
    text conversation_id FK
    text harness
    text handle
    text locality
    text created_at
  }
  conversation_log_refs {
    text id PK
    text project_id FK
    text handle_id FK
    text locator
    text content_hash
    text range_spec
    text created_at
  }
  exploration_conversations {
    text id PK
    text project_id FK
    text exploration_id FK
    text conversation_id FK
    text created_at
  }
  journal_conversation_handles {
    text id PK
    text project_id FK
    text journal_entry_id
    text handle_id FK
    text created_at
  }
  source_availability_observations {
    text id PK
    text project_id FK
    text subject_kind
    text subject_id
    text observed_at
    text observer
    text locality
    integer available
    text note
    text created_at
  }
  projects ||--o{ intents : scopes
  projects ||--o{ intent_snapshots : scopes
  projects ||--o{ intent_deferrals : scopes
  projects ||--o{ intent_dispositions : scopes
  projects ||--o{ intent_operations : scopes
  projects ||--o{ explorations : scopes
  projects ||--o{ exploration_checkpoints : scopes
  projects ||--o{ exploration_checkpoint_items : scopes
  projects ||--o{ logical_conversations : scopes
  projects ||--o{ conversation_handles : scopes
  projects ||--o{ conversation_log_refs : scopes
  projects ||--o{ exploration_conversations : scopes
  projects ||--o{ journal_conversation_handles : scopes
  projects ||--o{ source_availability_observations : scopes
  intents ||--o{ intent_snapshots : revises
  intents ||--o{ intent_deferrals : defers
  intents ||--o{ intent_dispositions : disposes
  intents ||--o{ intent_operations : maps
  intent_deferrals ||--o{ intent_dispositions : anchors
  explorations ||--o{ exploration_checkpoints : checkpoints
  explorations ||--o{ exploration_conversations : spans
  exploration_checkpoints ||--o{ exploration_checkpoint_items : contains
  logical_conversations ||--o{ conversation_handles : carries
  logical_conversations ||--o{ exploration_conversations : joins
  conversation_handles ||--o{ conversation_log_refs : locates
  conversation_handles ||--o{ journal_conversation_handles : correlates
